--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "src/code.js",
   "scripts": {
-    "build": "webpack",
+    "lint": "eslint ",
+    "flow": "flow src",
+    "unflow": "flow-remove-types src/ --out-dir pre/",
+    "build": "npm run unflow && webpack",
     "round": "node manualTest/setup.js ./manualTest/testFIle"
   },
   "repository": {
@@ -18,6 +21,9 @@
   },
   "homepage": "https://github.com/ShakMR/pacmanContest#readme",
   "devDependencies": {
+    "eslint": "^7.13.0",
+    "eslint-config-skyscanner": "^8.0.2",
+    "jest": "^26.6.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   }
